# mros-w24-solution

./: .gitignore  CMakeLists.txt  main.cpp
include/command_line/: mroskill.hpp  mrosnode.hpp  mrostopic.hpp
include/logging/: logging.hpp
include/mediator/: mediator.hpp  mediator_old.hpp
include/messages/: exampleMessages.hpp  example_message.hpp
include/mros/: mros.hpp  node.hpp  node_base.hpp  node_old.hpp  publisher.hpp  subscriber.hpp
include/mros/utils/: mros_exception.hpp  utils.hpp
include/socket/: client_socket.hpp  connection_socket.hpp  server_socket.hpp  socket.hpp
include/socket/bson_rpc_socket/: bson_rpc_socket.hpp  client_bson_rpc_socket.hpp  connection_bson_rpc_socket.hpp
include/socket/bson_socket/: bson_socket.hpp  client_bson_socket.hpp  connection_bson_socket.hpp  server_bson_socket.hpp
include/socket/json_rpc_socket/: client_json_rpc_socket.hpp  connection_json_rpc_socket.hpp  json_rpc_socket.hpp  server_json_rpc_socket.hpp
include/socket/message_socket/: message_socket.hpp
include/socket/rpc_socket/: client_rpc_socket.hpp  connection_rpc_socket.hpp  rpc_socket.hpp
include/socket/utils/: socket_exception.hpp
src/command_line/: mroscore.cpp
src/logging/: logging.cpp
src/mediator/: README.md  mediator.cpp  mediator_old.cpp
src/mros/: mros.cpp  node.cpp  node_old.cpp  publisher.cpp  subscriber.cpp
src/mros/Messages/: exampleMessages.hpp
src/mros/utils/: utils.cpp
src/socket/: client_socket.cpp  server_socket.cpp  socket.cpp
src/socket/bson_rpc_socket/: bson_rpc_socket.cpp  client_bson_rpc_socket.cpp  connection_bson_rpc_socket.cpp
src/socket/bson_socket/: bson_socket.cpp  client_bson_socket.cpp  connection_bson_socket.cpp
src/socket/json_rpc_socket/: client_json_rpc_socket.cpp  connection_json_rpc_socket.cpp  json_rpc_socket.cpp
src/socket/message_socket/: client_message_socket.cpp  message_socket.cpp
src/socket/rpc_socket/: client_rpc_socket.cpp  connection_rpc_socket.cpp  rpc_socket.cpp
test/mediator/: test_mediator.cpp
test/mros/: test_mros.cpp  test_node.cpp  test_publisher.cpp  test_subscriber.cpp
test/socket/: test_bson_rpc_socket.cpp
test/socket/bson_rpc_socket/: test_bson_rpc_socket.cpp
test/socket/bson_socket/: test_bson_socket.cpp
test/socket/message_socket/: test_message_socket.cpp
test/socket/rpc_socket/: test_rpc_socket.cpp
test_manual/logger/: test_manual_logger.cpp
test_manual/mros/: test_manual_mediator.cpp  test_manual_node.cpp  test_manual_publish.cpp  test_manual_subscribe.cpp
test_manual/socket/json_rpc_socket/: test_json_rpc_client.cpp  test_json_rpc_server.cpp
test_manual/socket/rpc_socket/: test_rpc_client.cpp  test_rpc_server.cpp
